--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "clean": "rmdir /s /q .next 2>nul || rm -rf .next"
   },
   "dependencies": {
     "@radix-ui/react-checkbox": "^1.3.1",
