--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "lucide-react": "^0.511.0",
     "next": "latest",
     "next-themes": "^0.4.6",
+    "react-qr-code": "^2.0.15",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.6.0",
+    "stripe": "^16.6.0",
     "tailwind-merge": "^3.3.0"
   },
   "devDependencies": {
