--- a/package.json
+++ b/package.json
@@ -18,13 +18,14 @@
     "@supabase/supabase-js": "latest",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.23.22",
     "lucide-react": "^0.511.0",
     "next": "latest",
     "next-themes": "^0.4.6",
-    "react-qr-code": "^2.0.15",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.6.0",
+    "react-qr-code": "^2.0.15",
     "stripe": "^16.6.0",
     "tailwind-merge": "^3.3.0"
   },
