docs(env): expand .env.example with Supabase, HelloAsso, and site URLs

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,41 @@
-# Update these with your Supabase details from your project settings > API
-# https://app.supabase.com/project/_/settings/api
-NEXT_PUBLIC_SUPABASE_URL=your-project-url
-NEXT_PUBLIC_SUPABASE_PUBLISHABLE_OR_ANON_KEY=your-anon-key
+###############################
+# Supabase (Project > Settings > API)
+###############################
+# Public URL of your Supabase project (e.g. https://xxxxx.supabase.co)
+NEXT_PUBLIC_SUPABASE_URL=
+# Public (anon/publishable) key for browser/server-SSR client
+NEXT_PUBLIC_SUPABASE_PUBLISHABLE_OR_ANON_KEY=
+
+# Service role key (server-only, used in webhooks/admin operations)
+# Do NOT expose publicly or in the browser.
+SUPABASE_SERVICE_ROLE_KEY=
+
+###############################
+# App URLs (used to build links and callbacks)
+###############################
+# Public site URL (e.g. https://amicale.example.com). Used to generate /don/[intentId] links.
+NEXT_PUBLIC_SITE_URL=
+
+# HelloAsso redirect URLs (public routes in your app)
+# Typically: https://your-site/don/success and https://your-site/don/cancel
+HELLOASSO_SUCCESS_URL=
+HELLOASSO_CANCEL_URL=
+
+###############################
+# HelloAsso API
+###############################
+# Base API URL (keep default unless using sandbox with different host)
+HELLOASSO_BASE_URL=https://api.helloasso.com/v5
+# OAuth Client Credentials (HelloAsso > Developers)
+HELLOASSO_CLIENT_ID=
+HELLOASSO_CLIENT_SECRET=
+# Your organization slug on HelloAsso
+HELLOASSO_ORGANIZATION_SLUG=
+# Webhook secret configured in HelloAsso (used to verify signatures)
+HELLOASSO_WEBHOOK_SECRET=
+
+###############################
+# Optional
+###############################
+# NODE_ENV=development
+# LOG_LEVEL=info
