--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -123,6 +123,12 @@
 			"type": "shell",
 			"command": "npm run typecheck",
 			"group": "build"
+		},
+		{
+			"label": "Lint & Typecheck",
+			"type": "shell",
+			"command": "npm run typecheck && npm run lint",
+			"group": "build"
 		}
 	]
 }
