feat(landing): enhance contact section layout and styling; improve operations stats display with new card design and disclaimer

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -129,6 +129,12 @@
 			"type": "shell",
 			"command": "npm run typecheck && npm run lint",
 			"group": "build"
+		},
+		{
+			"label": "Lint & Typecheck",
+			"type": "shell",
+			"command": "npm run typecheck && npm run lint",
+			"group": "build"
 		}
 	]
 }
