feat(landing/map): allow fractional zoom (zoomSnap 0.25, zoomDelta 0.5) and replace initial fitBounds with invalidateSize + getBoundsZoom + setView for a closer, reliable initial view

--- a/.env.example
+++ b/.env.example
@@ -34,6 +34,10 @@ HELLOASSO_ORGANIZATION_SLUG=
 # Webhook secret configured in HelloAsso (used to verify signatures)
 HELLOASSO_WEBHOOK_SECRET=
 
+# Update this with your resend.com credentials from https://resend.com/api-keys
+RESEND_API_KEY=
+RESEND_FROM=
+
 ###############################
 # Optional
 ###############################
