--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "clean": "rmdir /s /q .next 2>nul || rm -rf .next"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.2",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-checkbox": "^1.3.1",
     "@radix-ui/react-dialog": "^1.1.15",
@@ -31,11 +32,13 @@
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.65.0",
     "react-hot-toast": "^2.6.0",
     "react-leaflet": "^5.0.0",
     "react-qr-code": "^2.0.15",
     "stripe": "^19.1.0",
-    "tailwind-merge": "^3.3.0"
+    "tailwind-merge": "^3.3.0",
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
