--- a/package.json
+++ b/package.json
@@ -31,9 +31,11 @@
     "next": "latest",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.65.0",
     "react-hot-toast": "^2.6.0",
+    "react-intersection-observer": "^10.0.0",
     "react-leaflet": "^5.0.0",
     "react-qr-code": "^2.0.15",
     "stripe": "^19.1.0",
